Homework#2. Add CSS

--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -3,31 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
+
 <body>
     <ul>
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li>Контакты</li>
+        <li><a href="../index.html" class="navigate">Главная</a></li>
+        <li><a href="catalog.html" class="navigate">Каталог</a></li>
+        <li><a href="#" class="navigate">Контакты</a></li>
     </ul>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam harum nostrum iure rem doloremque, quisquam enim facere recusandae debitis placeat, fugiat fuga nemo aliquam modi maxime repellendus? Possimus, autem. Atque sit voluptatem, deleniti perspiciatis voluptatibus rem provident omnis eos voluptatum adipisci molestias possimus optio sequi eveniet suscipit cum necessitatibus quod, eius consequatur? Quos cumque expedita blanditiis corporis at quidem iste similique id explicabo eius, cupiditate enim impedit nobis quibusdam vero accusantium exercitationem necessitatibus quo architecto labore. Odio maiores sapiente nostrum, laudantium consequuntur et repudiandae tempore accusantium magni voluptatem aspernatur fuga assumenda veritatis voluptas? Assumenda dolorum consequuntur numquam veritatis sequi asperiores vero tenetur quae qui velit magni, nisi quasi dolorem quaerat rerum rem consectetur excepturi eveniet id officiis eaque praesentium quo laboriosam optio! Eum, quibusdam quaerat soluta quam laborum provident quasi. Eligendi, dolore sit enim saepe magni corporis nemo reprehenderit consequatur, nam, unde eaque. Quaerat laudantium minus consequuntur aspernatur sunt ipsum.</p>
+    
+    <h1 class="heading">Каталог</h1>
+    <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam harum nostrum iure rem doloremque, quisquam enim facere recusandae debitis placeat, fugiat fuga nemo aliquam modi maxime repellendus? Possimus, autem. Atque sit voluptatem, deleniti perspiciatis voluptatibus rem provident omnis eos voluptatum adipisci molestias possimus optio sequi eveniet suscipit cum necessitatibus quod, eius consequatur? Quos cumque expedita blanditiis corporis at quidem iste similique id explicabo eius, cupiditate enim impedit nobis quibusdam vero accusantium exercitationem necessitatibus quo architecto labore. Odio maiores sapiente nostrum, laudantium consequuntur et repudiandae tempore accusantium magni voluptatem aspernatur fuga assumenda veritatis voluptas? Assumenda dolorum consequuntur numquam veritatis sequi asperiores vero tenetur quae qui velit magni, nisi quasi dolorem quaerat rerum rem consectetur excepturi eveniet id officiis eaque praesentium quo laboriosam optio! Eum, quibusdam quaerat soluta quam laborum provident quasi. Eligendi, dolore sit enim saepe magni corporis nemo reprehenderit consequatur, nam, unde eaque. Quaerat laudantium minus consequuntur aspernatur sunt ipsum.</p>
     <div>
         <div>
             <img src="../img/mango-shake-fresh-tropical-fruit-smoothies.jpg" alt="Mango fresh" width="400px">
             <h3>Манговый сок</h3>
-            <p>Это очень вкусный сок из манго!</p>
+            <p class="content">Это очень вкусный сок из манго!</p>
         </div>
         <div>
             <img src="../img/tasty-donuts-with-colorful-sprinkles.jpg" alt="Donuts" width="400px">
             <h3>Пончики</h3>
-            <p>Это тоже очень вкусные пончики, да тем более ещё их три!</p>
+            <p class="content">Это тоже очень вкусные пончики, да тем более ещё их три!</p>
         </div>
         <div>
             <img src="../img/top-view-vegan-baked-products-arrangement.jpg" alt="Vegan" width="400px">
             <h3>Круасаны</h3>
-            <p>Берём выше, круасаны, что может быть лучше!</p>
+            <p class="content">Берём выше, круасаны, что может быть лучше!</p>
         </div>
     </div>
 </body>
