--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog/catalog.html">Каталог</a></li>
-        <li>Контакты</li>
+        <li><a href="index.html" class="navigate">Главная</a></li>
+        <li><a href="catalog/catalog.html" class="navigate">Каталог</a></li>
+        <li><a href="#" class="navigate">Контакты</a></li>
     </ul>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam quis, error temporibus aperiam ea optio qui molestias id commodi laboriosam corporis! Amet facilis animi ipsam labore cum totam voluptates.</p>
-    <h2>Добро пожаловать на сайт!</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <p>Quia, iusto aliquam? Dignissimos earum est doloribus.</p>
-        <p>Suscipit harum maxime quo, numquam, nisi ipsam aliquid aspernatur veritatis veniam corporis repellat. Quis, reiciendis!</p>
 
+    <h1 class="heading">Главная страница</h1>
+    <p class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam quis, error temporibus aperiam ea optio qui molestias id commodi laboriosam corporis! Amet facilis animi ipsam labore cum totam voluptates.</p>
+
+    <h2 class="second_header">Добро пожаловать на сайт!</h2>
+        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p class="content">Quia, iusto aliquam? Dignissimos earum est doloribus.</p>
+        <p class="content">Suscipit harum maxime quo, numquam, nisi ipsam aliquid aspernatur veritatis veniam corporis repellat. Quis, reiciendis!</p>
 </body>
 </html>
